--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@ body{
 color: white;
 background: rgb(139, 5, 5);
     }
+
+    chamada{
+    background:blueviolet;
+    padding-botton: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-cotent: center;
+    y
+
+    }
+    
