--- a/style.css
+++ b/style.css
@@ -10,6 +10,35 @@ font-family:"Faculty Glyphic", serif;
     display: flex;
     justify-cotent: center;
     
+    categoria {
+padding-left: 20px;
+padding-right: 20px;
+}
+
+div {
+margin-right: 20px;
+}
+
+.chamada-texto {
+margin-right: 5%;
+margin-left: 5%;
+}
+
+img {
+height: 200px;
+}
+
+.categoria-videos {
+display: flex;
+overflow-x: auto;
+gap: 10px;
+}
+
+h1 {
+font-size: 30px;
+
+
+
 
     }
     
