--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@ color: white;
 background: rgb(139, 5, 5);
 font-family:"Faculty Glyphic", serif;
     }
- chamada{
+
+ .chamada{
     background:blueviolet;
     padding-botton: 80px;
     padding-top: 80px;
     display: flex;
     justify-cotent: center;
-    
-    categoria {
-padding-left: 20px;
+ }
+ 
+    .categoria {
+padding-left: 20px; 
 padding-right: 20px;
 }
 
@@ -36,9 +38,5 @@ gap: 10px;
 
 h1 {
 font-size: 30px;
-
-
-
-
     }
     
